src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family 1</fullName>
                </value>
                <value>
                    <fullName>Family 2</fullName>
                </value>
                <value>
                    <fullName>Family 3</fullName>
                </value>
                <value>
                    <fullName>Family 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Type 3</fullName>
                </value>
                <value>
                    <fullName>Type 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>